--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -8,3 +8,9 @@ AllCops:
     - config/**
     - bin/**
   NewCops: enable
+Style/Documentation:
+  Enabled: false
+Style/FrozenStringLiteralComment:
+  Enabled: false
+Metrics/MethodLength:
+  Max: 20
