Revealing a cell, reveals surrounding cells without mines until the ones next to mines.
+ Rename cell column name
+ Game level refactor

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -12,5 +12,7 @@ Style/Documentation:
   Enabled: false
 Style/FrozenStringLiteralComment:
   Enabled: false
+Style/ParallelAssignment:
+  Enabled: false
 Metrics/MethodLength:
   Max: 20
