--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "turbolinks": "^5.2.0"
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "turbolinks": "^5.2.0",
+    "underscore": "^1.12.0"
   },
   "version": "0.1.0",
   "devDependencies": {
