--- a/config/database.yml
+++ b/config/database.yml
@@ -83,6 +83,4 @@ test:
 #
 production:
   <<: *default
-  database: minesweeper_production
-  username: minesweeper
-  password: <%= ENV['MINESWEEPER_DATABASE_PASSWORD'] %>
+  password: <%= ENV['DATABASE_URL'] %>
